--- a/99-8b/vhdl/ngv-test/ngv-test.qsf
+++ b/99-8b/vhdl/ngv-test/ngv-test.qsf
@@ -56,11 +56,21 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_location_assignment PIN_E15 -to clk
 set_location_assignment PIN_F14 -to r
 set_location_assignment PIN_F13 -to g
 set_location_assignment PIN_E11 -to b
 set_global_assignment -name CDF_FILE output_files/Chain.cdf
-set_location_assignment PIN_C2 -to rst
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_location_assignment PIN_D14 -to rst
 set_global_assignment -name CDF_FILE Chain.cdf
+set_global_assignment -name VERILOG_FILE blink.v
+set_global_assignment -name VERILOG_FILE lcd.v
+set_location_assignment PIN_N15 -to blk
+set_location_assignment PIN_F16 -to cs
+set_location_assignment PIN_E15 -to pclk
+set_location_assignment PIN_C2 -to prst
+set_location_assignment PIN_C14 -to rd
+set_location_assignment PIN_G15 -to rs
+set_location_assignment PIN_D12 -to wr
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_location_assignment PIN_N16 -to data[15]
+set_location_assignment PIN_L16 -to data[12]
