--- a/cortex/firmware/ngv-main/.cproject
+++ b/cortex/firmware/ngv-main/.cproject
@@ -34,6 +34,7 @@
 								<option id="gnu.c.compiler.option.debugging.level.1151217369" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated" />
 								<option id="gnu.c.compiler.option.include.paths.1488684866" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../Inc" />
+									<listOptionValue builtIn="false" value="../Drivers/STG" />
 									<listOptionValue builtIn="false" value="../Drivers/NGV/Include" />
 									<listOptionValue builtIn="false" value="../Drivers/NSASM/Include" />
 									<listOptionValue builtIn="false" value="../Drivers/NSGDX/Include" />
