--- a/cortex/firmware/ngv-main/ngv-main Run.cfg
+++ b/cortex/firmware/ngv-main/ngv-main Run.cfg
@@ -10,6 +10,7 @@ set WORKAREASIZE 0x8000
 transport select "hla_swd"
 
 set CHIPNAME STM32F429ZGTx
+set BOARDNAME ngv-main
 
 # Enable debug when in low power modes
 set ENABLE_LOW_POWER 1
