--- a/cortex/firmware/ngv-main/.cproject
+++ b/cortex/firmware/ngv-main/.cproject
@@ -35,6 +35,7 @@
 								<option id="gnu.c.compiler.option.include.paths.1488684866" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="../Inc"/>
 									<listOptionValue builtIn="false" value="../Drivers/STG"/>
+									<listOptionValue builtIn="false" value="../Drivers/NSGAL"/>
 									<listOptionValue builtIn="false" value="../Drivers/NGV/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/NSASM/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/NSGDX/Include"/>
